pyXX-pyqt4: bump to 2.8.1; add in support for ccache.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73342 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py27-pyqt4/Portfile
+++ b/dports/python/py27-pyqt4/Portfile
@@ -5,8 +5,7 @@ PortSystem	1.0
 PortGroup   qt4 1.0
 
 name		py27-pyqt4
-version		4.7.7
-revision    1
+version		4.8.1
 categories	python devel
 platforms	macosx
 maintainers     michaelld openmaintainer
@@ -22,9 +21,9 @@ master_sites	http://www.riverbankcomputing.com/static/Downloads/PyQt4/ \
 distname	PyQt-mac-gpl-${version}
 dist_subdir         python
 
-checksums           md5     18213126857b7c6e6da6f7a1720d4870 \
-                    sha1    e07f851b54fa5cf6ec3e146f07b1c234c5069ca3 \
-                    rmd160  fe1a01ce93a012224a4c590b56dc3bfa8fcdbe74
+checksums           md5     177fa10c6420d6f7fc745478fa64304a \
+                    sha1    55a448993fc011f886fd2d375e0748d1baae39eb \
+                    rmd160  517cf7c3ac589b962a47dfa9410683f135e9b980
 
 depends_lib-append port:py27-sip
 
@@ -43,6 +42,11 @@ pre-configure {
 
 	reinplace "s|-bundle|-bundle -flat_namespace -undefined suppress|" \
 		${worksrcpath}/qmake.conf
+
+    # allow ccache, if specified by the user
+    if {[tbool configure.ccache]} {
+        configure.env-append "CCACHE=ccache"
+    }
 }
 
 configure.cmd	"${prefix}/bin/python2.7 configure.py \
@@ -83,6 +87,12 @@ post-configure {
 	}
 }
 
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
+    }
+}
 
 build.target    all
 use_parallel_build yes
