qt4-mac: bump to 4.7.1; fix use of CCACHE variable; fix linking with QtHelp on 10.4 (hopefully).
git-svn-id: https://svn.macports.org/repository/macports/trunk@73343 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -10,8 +10,7 @@ PortGroup           qt4 1.0
 
 name                qt4-mac
 conflicts           qt4-mac-devel
-version             4.7.0
-revision            1
+version             4.7.1
 categories          aqua
 platforms           macosx
 maintainers         michaelld
@@ -24,9 +23,9 @@ long_description    Qt Tool Kit: A cross-platform framework \
 
 master_sites        trolltech
 distname            qt-everywhere-opensource-src-${version}
-checksums           md5     3a2f25b9b115037277f4fb759194a7a5 \
-                    sha1    a5796c8f468c8f59249e5c696f913864c979f411 \
-                    rmd160  3e9c0f0d9843b5c03ad4bd6193aff98531ee0746
+checksums           md5     6f88d96507c84e9fea5bf3a71ebeb6d7 \
+                    sha1    fcf764d39d982c7f84703821582bd10c3192e341 \
+                    rmd160  de6998948eb9f51a9193b9020ba80cfd52d50899
 
 depends_lib-append  port:zlib port:dbus port:openssl port:sqlite3 \
                     port:tiff port:libpng port:libmng port:jpeg
@@ -235,12 +234,20 @@ pre-configure {
 platform darwin 8 {
     # build as Carbon only, not cocoa.
     configure.args-append -carbon
+
+    # required linking flags?
     configure.ldflags-append -lcrypto -ldbus-1 -ljpeg -llcms -lsqlite3 -lssl -lz
+
+    # build all Makefiles during configure, ...
+    configure.args-delete -fast
+    # ... then patch them: 10.4 requires -lQtHelp to be followed by
+    # -lQtCLucene (10.5+ figures this out) as found in Makefiles only.
+    # If just release, will be just "Makefile".  If using +debug, will
+    # be "Makefile.Release" and "Makefile.Debug", so do a find on
+    # "Makefile*" to work no matter which is selected.
     post-configure {
-        fs-traverse item ${worksrcpath} {
-            if {"Makefile" == [file tail ${item}]} {
-                reinplace "s|-framework QtHelp|-framework QtHelp -lQtCLucene|" ${item}
-            }
+        foreach fixfile [exec find ${worksrcpath} -name "Makefile*"] {
+            reinplace "s|-lQtHelp|-lQtHelp -lQtCLucene|g" ${fixfile}
         }
     }
 }
