Change text for users from ui_msg to notes format.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73345 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nagios/Portfile
+++ b/dports/net/nagios/Portfile
@@ -93,10 +93,9 @@ post-destroot {
 	}
 }
 
-post-activate {
 
-ui_msg "\n
-	               ************************************************************
+notes \
+ "                         ************************************************************
 		  The basic steps to complete the installation are below.  But Nagios is
 		  a complex program so you should read the documentation online at
 		  http://www.nagios.org or locally at ${prefix}/share/nagios/docs/index.html
@@ -206,8 +205,4 @@ File Locations:
 	Lock file:  ${prefix}/var/nagios/nagios.lock
  	Init file:  ${prefix}/var/nagios/nagios.init
 	HTML URL:  http://localhost/nagios/
-	CGI URL:  http://localhost/nagios/cgi-bin/
-
-\n"
-
-}
+	CGI URL:  http://localhost/nagios/cgi-bin/"
