dcraw: update to 9.05-20101110114100
git-svn-id: https://svn.macports.org/repository/macports/trunk@73346 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/dcraw/Portfile
+++ b/dports/graphics/dcraw/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 PortGroup               archcheck 1.0
 
 name                    dcraw
-version                 9.04-20100728172300
+version                 9.05-20101110114100
 set version_number      [lindex [split ${version} -] 0]
 categories              graphics
 maintainers             ryandesign
@@ -26,9 +26,8 @@ long_description        ${name} is a small program for processing raw, \
                         digital cameras with better quality output than the \
                         tools provided by camera vendors.
 
-checksums               md5     b7052ef5ffe912730ad0ebe4db26e70e \
-                        sha1    c65a0c7bb52ccdd05c2adccf4b343f4d0caab40e \
-                        rmd160  6eae28242abc3aa0b222f227fb05ff6b8ff84022
+checksums               sha1    bab494ed8b8cf0725f0bbb8888d893dac5b2a7cf \
+                        rmd160  7d7fa0ed73bfec1b55c40abfc8356ef824bbabc4
 
 depends_lib             port:gettext \
                         port:libiconv \
