--- a/dports/kde/kdelibs4/Portfile
+++ b/dports/kde/kdelibs4/Portfile
@@ -6,6 +6,7 @@ PortGroup           kde4   1.1
 
 name                kdelibs4
 version             4.5.3
+revision            1
 categories          kde kde4
 maintainers         snc sharky
 description         KDE4 core libraries
