Upgrade to sbcl-1.0.44.
'html' is no longer the default variant.

The variants 'html' and 'pdf' are currently mutually exclusive, even
though 'pdf' installs a superset of the documentation that 'html'
does.  This still needs work.


git-svn-id: https://svn.macports.org/repository/macports/trunk@73350 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sbcl/Portfile
+++ b/dports/lang/sbcl/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		sbcl
-version		1.0.43
+version		1.0.44
 revision        0
 set subrevision	""
 categories	lang
@@ -32,9 +32,9 @@ distname	${name}-${version}-source${subrevision}
 worksrcdir	${name}-${version}
 
 checksums           sbcl-${version}-source.tar.bz2 \
-                    md5     2b125844371881a99cfdf63c286e74cd \
-                    sha1    d397556a61f02a11921ba8875b3401e0596efe12 \
-                    rmd160  eed240655c87fb0a1834dda9b5ce941c9819d5a6 \
+                    md5     f34a3995db6e12439996096fd437f878 \
+                    sha1    0e1f27ff4769ab9775fda0cbed95a6cca0da295d \
+                    rmd160  c57c9852d067a3f996f84610fda80d70fdd0a2fe \
                     sbcl-1.0.30-x86-darwin-binary.tar.bz2 \
                     md5     c15bbff2e7a9083ecd50942edb74cc8c \
                     sha1    069431d0a6e6cfbd7489c3792392926de199a93f \
@@ -93,12 +93,10 @@ build		{
 }
 
 post-build {
-	if {[variant_isset html]} {
+    if {[variant_isset html] || [variant_isset pdf]} {
 		system "cd ${worksrcpath}/doc; INSTALL_ROOT=${destroot}${prefix} sh ${worksrcpath}/doc/make-doc.sh"
 	}
 }
-
-default_variants      +html
 
 variant html conflicts pdf description {Installs documentation in HTML and Info formats} {
     patchfiles-append patch-make-doc.diff
