emacs: fix up dependencies  * add missing dependencies  * explicitly disable some libraries so they are not autodetected if    they happen to be installed  * enable dbus by default; enable gconf for +gtk variant only  * remove --without-carbon conf flag (does not exist in emacs 23)  * switch to port: instead of lib: dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@73351 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/emacs/Portfile
+++ b/dports/editors/emacs/Portfile
@@ -6,7 +6,7 @@ PortGroup  muniversal 1.0
 
 name            emacs
 version         23.2
-revision        2
+revision        3
 
 categories      editors
 maintainers     dports openmaintainer
@@ -28,14 +28,16 @@ checksums       md5     b6691852dae0bc142b3c12749f6b7ade \
                 rmd160  6d25f8d12cfa23e413ea353933ed871a3d3aa08e
 
 configure.args  --without-x \
-                --without-carbon \
+                --with-dbus \
+                --without-gconf \
+                --without-libotf \
+                --without-m17n-flt \
+                --without-gpm \
                 --infodir ${prefix}/share/info/${name}
 
-configure.args-append \
-    --without-dbus \
-    --without-gconf
-
-depends_lib     port:ncurses
+depends_lib     port:ncurses \
+                port:dbus \
+                port:texinfo
 
 post-destroot {
     xinstall -d ${destroot}${prefix}/share/emacs/${version}/leim
@@ -51,21 +53,22 @@ variant x11 description {Builds emacs as a X11 program with Lucid widgets} {
     configure.args-delete   --without-x
     configure.args-append   --with-x-toolkit=lucid \
                             --without-xaw3d \
-                            --without-carbon \
                             --with-xpm \
                             --with-jpeg \
                             --with-tiff \
                             --with-gif \
                             --with-png \
-                            --with-rsvg
+                            --with-rsvg \
+                            --with-xft 
     depends_lib-append      port:xorg-libXmu \
                             port:xorg-libXaw \
                             port:xpm \
-                            lib:libjpeg:jpeg \
-                            lib:libtiff:tiff \
-                            path:include/gif_lib.h:giflib \
-                            lib:libpng:libpng \
-                            lib:librsvg:librsvg
+                            port:jpeg \
+                            port:tiff \
+                            port:giflib \
+                            port:libpng \
+                            port:librsvg \
+                            port:Xft2            
 }
 
 variant motif requires x11 description {Builds emacs as an X11 program with Motif widgets} {
@@ -76,7 +79,10 @@ variant motif requires x11 description {Builds emacs as an X11 program with Moti
 
 variant gtk requires x11 description {Builds emacs as an X11 program with GTK+2 widgets} {
     configure.args-delete   --with-x-toolkit=lucid
+    configure.args-delete   --without-gconf
     configure.args-append   --with-x-toolkit=gtk
-    depends_lib-append      lib:libgtk.2:gtk2 \
-                            lib:libglib.2:glib2
+    configure.args-append   --with-gconf
+    depends_lib-append      port:gtk2 \
+                            port:glib2 \
+                            port:gconf
 }
