PCLauncher: update to r73353 to fix the label of the FOVY slider and copy the PowerPC note from the PlasmaClient port
git-svn-id: https://svn.macports.org/repository/macports/trunk@73354 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PCLauncher/Portfile
+++ b/dports/games/PCLauncher/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 PortGroup                   xcode 1.0
 
 name                        PCLauncher
-version                     0.0.2-73317
+version                     0.0.2-73353
 categories                  games
 maintainers                 ryandesign
 homepage                    http://plasmaclient.servegame.org/
@@ -64,6 +64,10 @@ Instructions for using PlasmaClient are in the file ${prefix}/share/doc/PlasmaCl
 
 For more information, please visit the Guild of Writers' IRC channel at irc://irc.guildofwriters.com/#writers
 "
+
+platform darwin powerpc {
+    notes-append "\n\nPlasmaClient probably does not work at all on PowerPC Macs at this time; try an Intel Mac."
+}
 
 platform darwin 8 {
     depends_run-delete      port:Drizzle
