id3lib: re-glibtoolize so universal works (#27246)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73360 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/id3lib/Portfile
+++ b/dports/audio/id3lib/Portfile
@@ -24,18 +24,16 @@ checksums          md5     19f27ddd2dda4b2d26a559a4f0f402a7 \
 depends_lib        port:libiconv \
                    port:zlib
 
-depends_build      port:libtool
+depends_build      port:autoconf port:automake port:libtool
 
 patchfiles         patch_id3lib_3.8.3_UTF16_writing_bug.diff \
                    id3lib-vbr-overflow.patch
 patch.pre_args     -p1
 
-configure.ccache   no
-
-post-patch {
-    # Bundled libtool does not understand -arch for linking
-    file delete ${worksrcpath}/libtool
-    file link -s ${worksrcpath}/libtool ${prefix}/bin/glibtool
+# Bundled libtool does not understand -arch for linking
+pre-configure {
+    system "cd ${worksrcpath} && ./reconf && glibtoolize"
 }
+configure.ccache   no
 
 use_parallel_build yes
