privoxy: ensure user is created when installing from an archive (#20270)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73361 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/privoxy/Portfile
+++ b/dports/www/privoxy/Portfile
@@ -37,6 +37,10 @@ pre-configure {
 
 	system "cd ${worksrcpath} && autoheader"
 }
+pre-install {
+	addgroup	${privoxyGroup}
+	adduser		${privoxyUser} gid=[existsgroup ${privoxyGroup}]
+}
 
 use_autoconf		yes
 configure.args		--with-user=${privoxyUser} \
