missingh: update homepage and master_sites (#27262), enable pre-deactivate code
git-svn-id: https://svn.macports.org/repository/macports/trunk@73362 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/missingh/Portfile
+++ b/dports/devel/missingh/Portfile
@@ -12,8 +12,8 @@ long_description	\
 		including ones for working with lists, logging, I/O	\
 		and strings.
 
-homepage	http://quux.org/devel/${name}
-master_sites	${homepage}
+homepage	http://software.complete.org/${name}
+master_sites	http://launchpadlibrarian.net/5201191/
 
 distfiles	${name}_${version}${extract.suffix}
 
@@ -49,5 +49,4 @@ destroot	{ system "cd ${worksrcpath} && ./setup copy --copy-prefix=${destroot}${
 
 post-activate   { system "${prefix}/libexec/${name}/register.sh" }
 
-#pre-deactivate { system "${prefix}/libexec/${name}/unregister.sh" }
-
+pre-deactivate { system "${prefix}/libexec/${name}/unregister.sh" }
