mass upgrade from Xfce 4.6.1 to  Xfce 4.6.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@73364 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/xfce/libxfcegui4/Portfile
+++ b/dports/xfce/libxfcegui4/Portfile
@@ -3,18 +3,18 @@
 PortSystem 1.0
 
 name		libxfcegui4
-version		4.6.1
+version		4.6.4
 categories	xfce
 platforms	darwin
 maintainers	afb
 description	various gtk widgets for xfce
 long_description ${description}
 homepage	http://www.xfce.org/
-master_sites	http://www.ca-us.xfce.org/archive/xfce-${version}/src/
+master_sites	http://www.ca-us.xfce.org/archive/xfce-4.6.2/src/
 use_bzip2	yes
-checksums	md5 539cff747634b8ee6f0d2362ee78a286 \
-		sha1 82bcfe74dd3b9188b9f41d8fa7dc4a8481461696 \
-		rmd160 295263f3e8a6bbcea05ce5ae8ab0f3a9cf1e4568
+checksums	md5 88de59b222cb9977f93a4c61011c1e1f \
+		sha1 a12c79f8fa14c5d1fc0fca5615a451b7d23f8695 \
+		rmd160 4d790c3990372aa82581450e1b2a2dfd36df293b
 
 configure.args	--enable-startup-notification \
                 --x-include=${prefix}/include --x-lib=${prefix}/lib
