--- a/dports/xfce/xfce4-dev-tools/Portfile
+++ b/dports/xfce/xfce4-dev-tools/Portfile
@@ -10,7 +10,7 @@ maintainers	afb
 description	A collection of tools and macros for Xfce developer
 long_description ${description}
 homepage	http://www.xfce.org/
-master_sites	http://www.ca-us.xfce.org/archive/xfce-${version}/src/
+master_sites	http://www.ca-us.xfce.org/archive/xfce-4.6.2/src/
 checksums	md5 c9587fa78e877eee858a33391d0afd62 \
 		sha1 a5a5cbc9e5f84f4939e53e3327c51f4b749c38a2 \
 		rmd160 ff2a5e9c7bd637efdc76b126f8854b934d4862ba
