--- a/dports/xfce/xfce4-panel/Portfile
+++ b/dports/xfce/xfce4-panel/Portfile
@@ -3,26 +3,25 @@
 PortSystem 1.0
 
 name		xfce4-panel
-version		4.6.1
-revision	3
+version		4.6.4
 categories	xfce
 platforms	darwin
 maintainers	afb
 description	The panel of the Xfce Desktop Environment
 long_description ${description}
 homepage	http://www.xfce.org/
-master_sites	http://www.ca-us.xfce.org/archive/xfce-${version}/src/
+master_sites	http://www.ca-us.xfce.org/archive/xfce-4.6.2/src/
 use_bzip2	yes
-checksums	md5 73a366b9892152266b465d7d9c35bef4 \
-		sha1 613c66f6402feba7983a7effb008f091182350d2 \
-		rmd160 47ce1703306e7427d300bb3675e2e8dcd13c459e
+checksums	md5 82f10a42aefca4cc26a6633e7478cc65 \
+		sha1 d2b310c036be84ed9886c06ae35b7a1a8eabfcb8 \
+		rmd160 35eaab8726a447b961024d433845f30804da4751
 
 depends_lib	port:xfconf port:exo port:libxml2 path:lib/pkgconfig/cairo.pc:cairo port:libwnck \
 		port:hicolor-icon-theme port:tango-icon-theme
 
 configure.args	--enable-startup-notification
 
-patchfiles	config-launcher-icons.diff fix-xfce-bug-6110.diff
+patchfiles	config-launcher-icons.diff
 
 platform darwin {
 	configure.args-append --disable-visibility
