--- a/dports/xfce/xfce-utils/Portfile
+++ b/dports/xfce/xfce-utils/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		xfce-utils
-version		4.6.1
+version		4.6.2
 categories	xfce
 platforms	darwin
 maintainers	afb
@@ -12,12 +12,14 @@ long_description ${description}
 homepage	http://www.xfce.org/
 master_sites	http://www.ca-us.xfce.org/archive/xfce-${version}/src/
 use_bzip2	yes
-checksums	md5 1aa2362b11e79e56d52ce0d265faf1b6 \
-		sha1 0bdb5b6e494f15372d8c0826ac93baca476c9f16 \
-		rmd160 4446c3882716e841c00e398df62b9d54046b9d26
+checksums	md5 5d23407700d7e8c9751e17a5bc955109 \
+		sha1 6373886c3d70e576859741bde747a235567ffd8e \
+		rmd160 06c33863da0f80f16ef154307e4b89085bc3958f
 
+depends_build	port:perl5
 depends_lib	port:libxfce4util port:xfconf
 
+configure.env	PERL=${prefix}/bin/perl5
 configure.args	--disable-gdm --with-xsession-prefix=${prefix}
 
 variant midori {
