--- a/dports/xfce/xfce4-settings/Portfile
+++ b/dports/xfce/xfce4-settings/Portfile
@@ -3,19 +3,18 @@
 PortSystem 1.0
 
 name		xfce4-settings
-version		4.6.1
-revision        1
+version		4.6.5
 categories	xfce
 platforms	darwin
 maintainers	afb
 description	Settings Manager that replaces the previous xfce-mcs-manager
 long_description ${description}
 homepage	http://www.xfce.org/
-master_sites	http://www.ca-us.xfce.org/archive/xfce-${version}/src/
+master_sites	http://www.ca-us.xfce.org/archive/xfce-4.6.2/src/
 use_bzip2	yes
-checksums	md5 dc1c8704471c5b0104fa10c30eb60cb6 \
-		sha1 ab117c3923571e2437095fd165ac4bf392e658e0 \
-		rmd160 6ecfa08d6ad528d43988c5fe128b2fcd6db6f0d3
+checksums	md5 f988cb732913b5fbc115ad7105d2231e \
+		sha1 c036cc2f3100a46b2649e678dff7c0106b219263 \
+		rmd160 a8155346285921f3087795598989df287be8abb4
 
 depends_build	path:bin/pkg-config:pkgconfig
 depends_lib	port:libxfcegui4 port:libwnck
