xfce-utils: add variant descriptions
git-svn-id: https://svn.macports.org/repository/macports/trunk@73365 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/xfce/xfce-utils/Portfile
+++ b/dports/xfce/xfce-utils/Portfile
@@ -22,12 +22,12 @@ depends_lib	port:libxfce4util port:xfconf
 configure.env	PERL=${prefix}/bin/perl5
 configure.args	--disable-gdm --with-xsession-prefix=${prefix}
 
-variant midori {
+variant midori description "use midori as the default browser" {
 	depends_lib-append port:midori
 	configure.args-append --with-browser=midori
 }
 
-variant firefox {
+variant firefox description "use firefox as the default browser" {
 	depends_lib port:firefox-x11
 	configure.args-append --with-browser=firefox
 }
