--- a/dports/devel/codeblocks/Portfile
+++ b/dports/devel/codeblocks/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			codeblocks
-version			8.02
+version			10.05
 platforms		darwin freebsd
 categories		devel aqua x11
 maintainers		afb
@@ -17,13 +17,15 @@ homepage		http://codeblocks.org/
 master_sites		http://download.berlios.de/codeblocks/ \
 			sourceforge:codeblocks
 distname		${name}-${version}-src
-worksrcdir		${name}-${version}
+worksrcdir		${name}-${version}-release
 use_bzip2		yes
-checksums		md5 ac15b4b3de50d7650c2f7a8dbcb30f88 \
-			sha1 078932cfd4fee2066ec931cb6dfa8079235c1237 \
-			rmd160 88451f42ac4de2b98d57416a3cea1a0647344b30
+checksums		md5 ab077d562e98b0586f2f86c14cb773ba \
+			sha1 b7697f512de69ad731f0febac4b91bb6c605fa57 \
+			rmd160 a1b4e93f4cc41ae6b7fd955689dae8648f0fd2f9
 
 configure.args  --with-contrib-plugins=all
+
+patchfiles	patch-HexEditor-HexEditPanel.cpp patch-MouseSap-Makefile.am
 
 post-destroot {
 	system "strip -S ${destroot}${prefix}/bin/codeblocks"
@@ -31,7 +33,9 @@ post-destroot {
 	system "strip -S ${destroot}${prefix}/lib/libcodeblocks*.dylib || true"
 	system "strip -S ${destroot}${prefix}/lib/libwxsmithlib*.so || true"
 	system "strip -S ${destroot}${prefix}/lib/libwxsmithlib*.dylib || true"
-	system "strip -S ${destroot}${prefix}/share/codeblocks/plugins/*.so"
+	system "strip -S ${destroot}${prefix}/lib/wxSmithContribItems/lib*.so || true"
+	system "strip -S ${destroot}${prefix}/lib/wxSmithContribItems/lib*.dylib || true"
+	system "strip -S ${destroot}${prefix}/lib/codeblocks/plugins/*.so"
 }
 
 platform macosx {}
@@ -45,6 +49,8 @@ if { ([variant_isset macosx] || ([info exists os.subplatform] && ${os.subplatfor
 if { ([variant_isset macosx] || ([info exists os.subplatform] && ${os.subplatform} == "macosx")) } {
 variant aqua conflicts x11 description "Use the wxMac port of wxWidgets" {
 	depends_lib port:wxWidgets
+
+    patchfiles-append codeblocks-splashscreen.diff codeblocks-keybinder.diff codeblocks-debugger.diff
 
     post-destroot {
 	xinstall -d -m 0755 ${destroot}/Applications/MacPorts
@@ -92,7 +98,5 @@ variant x11 description "Use the wxGTK port of wxWidgets" {
 	# wxgtk is not universal
 	universal_variant no
 	depends_lib port:wxgtk
-
-    patchfiles	patch-wxscoder.cpp.diff
 }
 
