--- a/dports/www/midori/Portfile
+++ b/dports/www/midori/Portfile
@@ -3,22 +3,47 @@
 PortSystem 1.0
 
 name		midori
-version		0.1.2
-revision        1
+version		0.2.9
 categories	www
 description	Midori is a lightweight web browser
 long_description	${description}
 homepage	http://www.twotoasts.de/index.php?/pages/midori_summary.html
 platforms	darwin
 maintainers	afb openmaintainer
-master_sites	http://goodies.xfce.org/releases/midori/
+
+set branch              [join [lrange [split ${version} .] 0 1] .]
+master_sites	http://archive.xfce.org/src/apps/midori/${branch}
 use_bzip2	yes
-checksums	md5 5169ead6783f374cedf3f89bf399bd75 \
-		sha1 7bcace4b766da58e312b494220b15e88a983b8ac \
-		rmd160 d7756231bd86aea5f5535d10bed0daa7128e3fe7
+
+checksums           md5     a5821d8e31fa944374ed51c09ca4e740 \
+                    sha1    3329c3b9cbe1d2fa0cb94e3f864802fae4fc5e9b \
+                    rmd160  3b8f2f8fa55f10e80a9e769e4085f96b7fa769ab
+
+# patch-extensions-mouse-gestures-c.diff reported as
+# http://www.twotoasts.de/bugs/index.php?do=details&task_id=903
+patchfiles	patch-extensions-mouse-gestures-c.diff \
+		patch-extensions-wscript_build.diff \
+		patch-wscript.diff
+
 		# glib 2.16.5 or later is required:
 depends_lib	port:gtk2 path:include/gio/gio.h:glib2 \
 		port:webkit-gtk lib:libxml2:libxml2 \
-		port:libtool port:intltool
+		port:libtool port:intltool \
+		port:libunique  port:libnotify port:vala
+                # last line is optional
+
+# libnotify doesn't build without X11 (that is on a gtk +quartz stack)
+variant no_x11 {
+	depends_lib-delete	port:libnotify
+	configure.cmd-append 	--disable-libnotify
+}
+
+# can't seem to get libunique to work (throws dbus errors on startup)
+depends_lib-delete	port:libunique
+configure.cmd-append 	--disable-unique
 
 configure.env-append	LINKFLAGS="-L${prefix}/lib -undefined dynamic_lookup"
+
+livecheck.url   ${homepage}
+livecheck.regex ${name}-(\[0-9.a-z\]*)\.tar\.bz2
+livecheck.type  regexm
