qt-assistant: update description.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73374 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qt-assistant/Portfile
+++ b/dports/devel/qt-assistant/Portfile
@@ -13,7 +13,9 @@ maintainers         michaelld openmaintainer
 homepage            http://qt.nokia.com/
 description         Qt Assistant
 long_description    Qt Assistant: Offering backwards compatibility for \
-    certain applications, from Qt 3 through Qt 4.6.3.
+    certain applications, relying on certain parts of Qt 3 through \
+    Qt 4.6.3, to work with Qt 4.7+; \
+    this module was removed from Qt as of version 4.7.0.
 
 master_sites        trolltech
 distname            qt-assistant-qassistantclient-library-compat-src-${version}
