libtorrent-devel: maintainer update to 0.12.7; see #27259
git-svn-id: https://svn.macports.org/repository/macports/trunk@73375 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libtorrent-devel/Portfile
+++ b/dports/net/libtorrent-devel/Portfile
@@ -4,8 +4,7 @@ PortSystem      1.0
 
 name            libtorrent-devel
 set real_name   libtorrent
-version         0.12.6
-revision        1
+version         0.12.7
 categories      net
 platforms       darwin
 maintainers     gmail.com:gardnermj
@@ -21,9 +20,9 @@ homepage        http://libtorrent.rakshasa.no/
 master_sites    ${homepage}downloads/
 distname        ${real_name}-${version}
 
-checksums       md5 037499ed708aaf72988cee60e5a8d96b \
-                sha1 bf7082f98bd6281493cba94a456697fb88c2c21b \
-                rmd160 62f0c9737d4ca9621c42d673ea997f9d36875530
+checksums       md5 2b5032bd3ef64f0d53f5ea73678e0eb0 \
+                sha1 8f00bbac7796230085c90cd15946374d07843c43 \
+                rmd160 13c66bb2ea50289219a58a4831c4b93b5c775197
 
 depends_build   port:zlib \
                 port:pkgconfig
@@ -43,5 +42,5 @@ post-destroot {
 }
 
 livecheck.type   regex
-livecheck.url   ${homepage}
-livecheck.regex ${real_name}-(\\d+(?:\\.\\d+)*)
+livecheck.url    [lindex ${master_sites} 0]
+livecheck.regex  ${real_name}-(\\d+(?:\\.\\d+)*)${extract.suffix}
