rtorrent-devel: maintainer update to 0.8.7; see #27260
git-svn-id: https://svn.macports.org/repository/macports/trunk@73376 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/rtorrent-devel/Portfile
+++ b/dports/net/rtorrent-devel/Portfile
@@ -4,8 +4,7 @@ PortSystem 1.0
 
 name              rtorrent-devel
 set real_name     rtorrent
-version           0.8.6
-revision        1
+version           0.8.7
 categories        net
 platforms         darwin
 maintainers       gmail.com:gardnermj
@@ -19,9 +18,9 @@ long_description  rTorrent is a console-based BitTorrent client. It aims to \
 homepage      http://libtorrent.rakshasa.no/
 master_sites  ${homepage}downloads/
 distname      ${real_name}-${version}
-checksums     md5 b804c45c01c40312926bcea6b55bb084 \
-              sha1 ffce3959ba91738bb444d689db3db1e2375b14ce \
-              rmd160 3d5109d4ee26c663b376e0b9f610ab6055c57ba9
+checksums     md5 d78f00dcf741c01254de72c0d3836761 \
+              sha1 691c95e948d02927edc05321e52cd1c63513fabc \
+              rmd160 52564096341088087c7a316c8e7637df77b672b6
 
 depends_lib  port:curl \
              port:libsigcxx2 \
@@ -34,12 +33,11 @@ configure.args  --mandir=${prefix}/share/man \
                 --disable-debug \
                 --enable-ipv6
 
-livecheck.name  ${real_name}
-
 variant xmlrpc description {Enable XMLRPC interface} {
     configure.args-append  --with-xmlrpc-c
     depends_lib-append     port:xmlrpc-c
 }
-livecheck.type	regex
-livecheck.url	${master_sites}
-livecheck.regex "${real_name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+
+livecheck.type   regex
+livecheck.url    [lindex ${master_sites} 0]
+livecheck.regex  ${real_name}-(\\d+(?:\\.\\d+)*)${extract.suffix}
