qt-assistant: make 'port lint' happy.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73377 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qt-assistant/Portfile
+++ b/dports/devel/qt-assistant/Portfile
@@ -6,7 +6,7 @@ PortGroup           qt4 1.0
 
 name                qt-assistant
 version             4.6.3
-categories          aqua
+categories          devel aqua
 platforms           macosx
 maintainers         michaelld openmaintainer
 
@@ -14,7 +14,7 @@ homepage            http://qt.nokia.com/
 description         Qt Assistant
 long_description    Qt Assistant: Offering backwards compatibility for \
     certain applications, relying on certain parts of Qt 3 through \
-    Qt 4.6.3, to work with Qt 4.7+; \
+    Qt 4.6.3, to work with Qt 4.7+. \
     this module was removed from Qt as of version 4.7.0.
 
 master_sites        trolltech
