--- a/dports/audio/id3v2/Portfile
+++ b/dports/audio/id3v2/Portfile
@@ -3,31 +3,42 @@
 PortSystem 1.0
 
 name			id3v2
-version			0.1.11
-revision		1
+version			0.1.12
 categories		audio
 maintainers		nordist.net:brent
+license			LGPL-2.1
+
 description		ID3v2 editing tool
 long_description A command line editor for ID3v2 tags, based on id3lib. \
 				Written by Myers Carpenter.
 homepage		http://id3v2.sourceforge.net/
 platforms		darwin
 master_sites	sourceforge
-checksums		md5 68afc3827cf01501dfb22949f901f1d8
+
+checksums		sha1    8f42153b2f53098c221da2e8fe42170e727cd9ad \
+				rmd160  084f90bea49cc8fb93acb5f78bb55602c5358ac5
+
 depends_lib		port:id3lib
 
-universal_variant no
-
-patchfiles		patch-Makefile.diff
-post-patch {
-	reinplace "s|/usr/local|${prefix}|g" "${worksrcpath}/Makefile"	
+variant universal {}
+if {[variant_isset universal]} {
+	set archflags ${configure.universal_cxxflags}
+} else {
+	set archflags ${configure.cxx_archflags}
 }
 
 use_configure	no
 
-build.env		CXX=${configure.cxx}
-
-destroot {
-	xinstall -m 755 ${worksrcpath}/id3v2 ${destroot}${prefix}/bin/
-	xinstall -m 644 ${worksrcpath}/id3v2.1 ${destroot}${prefix}/share/man/man1/
+pre-build {
+	# The distfile contains compiled Linux objects and binaries.
+	system "cd ${worksrcpath} && make clean"
 }
+
+build.args		CXX="${configure.cxx} ${archflags}" \
+				PREFIX=${prefix}
+
+destroot.args	PREFIX=${destroot}${prefix}
+
+livecheck.type	regex
+livecheck.url	http://sourceforge.net/projects/${name}/files/
+livecheck.regex	/${name}-(\[0-9.\]+)${extract.suffix}
