--- a/dports/databases/mysql-connector-odbc/Portfile
+++ b/dports/databases/mysql-connector-odbc/Portfile
@@ -3,7 +3,7 @@
 PortSystem              1.0
 
 name                    mysql-connector-odbc
-version                 5.1.6
+version                 5.1.8
 set branch              [join [lrange [split ${version} .] 0 1] .]
 homepage                http://www.mysql.com/products/connector/
 categories              databases
@@ -26,10 +26,8 @@ master_sites \
     http://sunsite.informatik.rwth-aachen.de/mysql/Downloads/Connector-ODBC/${branch}/ \
     http://ftp.plusline.de/mysql/Downloads/Connector-ODBC/${branch}/
 
-checksums \
-    md5     ed445092466be030f991b3a093649f45 \
-    sha1    c02e1c671fae60f7f7389dd2f963b07c3113ab35 \
-    rmd160  90eeefbfb0153a32dd7f0be5c2685fcf13036543
+checksums               sha1    2272075c66712cf7a05e50eeb4520f7c504c3ae8 \
+                        rmd160  0db5c4d42c7377f7fc1fa2ad569f50f9a497511e
 
 depends_lib \
     port:unixODBC \
@@ -46,5 +44,5 @@ pre-configure {
 }
 
 livecheck.type          regex
-livecheck.url           http://dev.mysql.com/
-livecheck.regex         "(5\\.1\\.\[0-9\.\]+)"
+livecheck.url           http://dev.mysql.com/downloads/connector/odbc/${branch}.html
+livecheck.regex         ${name}-(${branch}.\[0-9\.\]+)
