id3v2: make it openmaintainer; see #27273
git-svn-id: https://svn.macports.org/repository/macports/trunk@73381 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/id3v2/Portfile
+++ b/dports/audio/id3v2/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 name			id3v2
 version			0.1.12
 categories		audio
-maintainers		nordist.net:brent
+maintainers		nordist.net:brent openmaintainer
 license			LGPL-2.1
 
 description		ID3v2 editing tool
