texlive-bin: disable ccache; see #27263
git-svn-id: https://svn.macports.org/repository/macports/trunk@73382 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive-bin/Portfile
+++ b/dports/tex/texlive-bin/Portfile
@@ -124,6 +124,9 @@ configure.env-append        C_INCLUDE_PATH=${prefix}/include
 configure.env-append        CPLUS_INCLUDE_PATH=${prefix}/include
 configure.env-append        LIBRARY_PATH=${prefix}/lib
 
+# icu fails to build with ccache enabled; see #27263
+configure.ccache            no
+
 # work around bug in texlive makefiles where $OBJC is not recorded
 # during configure phase
 pre-build {
