codeblocks: fix +aqua plugin loading (+petty fixes)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73383 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/codeblocks/Portfile
+++ b/dports/devel/codeblocks/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			codeblocks
 version			10.05
+revision		1
 platforms		darwin freebsd
 categories		devel aqua x11
 maintainers		afb
@@ -25,7 +26,7 @@ checksums		md5 ab077d562e98b0586f2f86c14cb773ba \
 
 configure.args  --with-contrib-plugins=all
 
-patchfiles	patch-HexEditor-HexEditPanel.cpp patch-MouseSap-Makefile.am
+patchfiles	patch-HexEditor-HexEditPanel.cpp patch-MouseSap-Makefile.am patch-sdk-configmanager.cpp
 
 post-destroot {
 	system "strip -S ${destroot}${prefix}/bin/codeblocks"
@@ -53,8 +54,8 @@ variant aqua conflicts x11 description "Use the wxMac port of wxWidgets" {
     patchfiles-append codeblocks-splashscreen.diff codeblocks-keybinder.diff codeblocks-debugger.diff
 
     post-destroot {
-	xinstall -d -m 0755 ${destroot}/Applications/MacPorts
-	set appPath ${destroot}/Applications/MacPorts/CodeBlocks.app/Contents
+	xinstall -d -m 0755 ${destroot}${applications_dir}
+	set appPath ${destroot}${applications_dir}/CodeBlocks.app/Contents
 
 	xinstall -d -m 0755 ${appPath}
 	file copy -force ${worksrcpath}/codeblocks.plist \
@@ -85,9 +86,11 @@ variant aqua conflicts x11 description "Use the wxMac port of wxWidgets" {
 	ln -sf ${prefix}/bin/codeblocks ${appPath}/MacOS/CodeBlocks
 	xinstall -d -m 0755 ${appPath}/Resources/share
 	ln -sf ${prefix}/share/codeblocks ${appPath}/Resources/share/codeblocks
+	xinstall -d -m 0755 ${appPath}/Resources/lib
+	ln -sf ${prefix}/lib/codeblocks ${appPath}/Resources/lib/codeblocks
 	
 	delete ${destroot}${prefix}/share/applications/codeblocks.desktop
-	delete ${destroot}${prefix}/share/icons/gnome
+	delete ${destroot}${prefix}/share/icons/hicolor
 	delete ${destroot}${prefix}/share/mime/packages/codeblocks.xml
 	delete ${destroot}${prefix}/share/pixmaps/codeblocks.png
     }
