aqbanking5: no need for libglade2, pkg-config is build dep, rev bump, cleanup a little
git-svn-id: https://svn.macports.org/repository/macports/trunk@73384 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/aqbanking5/Portfile
+++ b/dports/devel/aqbanking5/Portfile
@@ -7,6 +7,7 @@ name              aqbanking5
 version           5.0.1
 # this is specific to this port and *version* for downloading it
 set release       74 
+revision          1
 
 categories        devel net finance
 maintainers       mk openmaintainer
@@ -33,12 +34,12 @@ conflicts         aqbanking
 depends_lib       port:gwenhywfar4 \
                   port:qt4-mac \
                   port:ktoblzcheck \
-                  port:libglade2 \
                   port:libofx \
                   port:gmp
-depends_build     port:libtool
 
-# qt is not universal
+depends_build     port:pkg-config \
+                  port:libtool
+
 universal_variant no
 
 configure.cppflags-append "-L${prefix}/lib"
@@ -48,8 +49,6 @@ configure.env             PKG_CONFIG=${prefix}/bin/pkg-config QTDIR=${prefix}
 configure.args-append \
                           --enable-static \
                           --disable-dependency-tracking \
-# Hmm, this doesn't seem to be needed anymore in version 5:
-#                          --with-frontends="cbanking g2banking q4banking" \
                           --with-backends="aqhbci aqofxconnect aqnone" 
 
 variant enable_local_install description "Enable local installation mode (plugins, data, locale and config are located relatively to the binary)" {
