kmymoney4: added missing dependency to oxygen-icons, rev bump
git-svn-id: https://svn.macports.org/repository/macports/trunk@73385 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -8,7 +8,7 @@ PortGroup           kde4    1.1
 
 name                kmymoney4
 version             4.5
-revision            2
+revision            3
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
@@ -34,7 +34,8 @@ checksums           md5     a764fe259c7885f22a10049cef68398e \
 depends_lib-append  port:libofx \
                     port:gwenhywfar4 \
                     port:aqbanking5 \
-                    port:kdepimlibs4
+                    port:kdepimlibs4 \
+                    port:oxygen-icons
 # Actually, we don't need this port anymore, since kmymoney 4.5 already gets shipped with an icns
 #                    port:makeicns
 
@@ -45,15 +46,12 @@ This port is still EXPERIMENTAL.               \n \
 ============================================== \n \
                                                \n \
 So far known problems are:                     \n \
- - oxygen icon theme is not found by the app   \n \
- - reports let the app hang                    \n \
+ - some reports let the app hang               \n \
  - some fonts seem to be missing, since        \n \
    layout looks inhomogenious                  \n \
- - kmm_banking plugin doesn't work             \n \
+ - kmm_banking plugin doesn't work yet         \n \
                                                \n \
 ============================================== \n \
 "
 }
-
-#configure.args-append   --disable-kbanking-plugin
 
