gwenhywfar4: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73386 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gwenhywfar4/Portfile
+++ b/dports/devel/gwenhywfar4/Portfile
@@ -54,4 +54,4 @@ variant enable_local_install description "Enable local installation mode (plugin
 
 livecheck.type    regex
 livecheck.url     http://www2.aquamaniac.de/sites/download/packages.php?package=01&showall=1
-livecheck.regex   ${distname}-(\[0-9.\]*)\\.tar
+livecheck.regex   gwenfywfar-(\[0-9.\]*)\\.tar
