aqbanking5: typo pkgconfig is build dep, rev bump
git-svn-id: https://svn.macports.org/repository/macports/trunk@73387 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/aqbanking5/Portfile
+++ b/dports/devel/aqbanking5/Portfile
@@ -7,7 +7,7 @@ name              aqbanking5
 version           5.0.1
 # this is specific to this port and *version* for downloading it
 set release       74 
-revision          1
+revision          2
 
 categories        devel net finance
 maintainers       mk openmaintainer
@@ -37,7 +37,7 @@ depends_lib       port:gwenhywfar4 \
                   port:libofx \
                   port:gmp
 
-depends_build     port:pkg-config \
+depends_build     port:pkgconfig \
                   port:libtool
 
 universal_variant no
