Fix livecheck.regex for python/py26-repoze.who.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73389 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-repoze.who/Portfile
+++ b/dports/python/py26-repoze.who/Portfile
@@ -15,7 +15,7 @@ long_description    ${description}
 license             BSD
 homepage            http://pypi.python.org/pypi/repoze.who/
 
-livecheck.regex     {: repoze\.who (.+)<}
+livecheck.regex     {repoze.who/(.+)"}
 livecheck.type      regex
 livecheck.url       ${homepage}
 
