audio/mpd flagged as non-universal due to libmodplug not building for i386
git-svn-id: https://svn.macports.org/repository/macports/trunk@73391 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/mpd/Portfile
+++ b/dports/audio/mpd/Portfile
@@ -33,6 +33,11 @@ depends_lib         port:audiofile \
 	port:libogg port:libvorbis \
     port:zlib \
     port:libao
+
+# libmodplug does not build for i386
+# http://trac.macports.org/ticket/24627
+universal_variant   no
+
 configure.args  --mandir=${prefix}/share/man \
     --enable-ao \
     --disable-ffmpeg
