unbound: update to 1.4.7
git-svn-id: https://svn.macports.org/repository/macports/trunk@73393 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/unbound/Portfile
+++ b/dports/net/unbound/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                unbound
-version             1.4.6
+version             1.4.7
 categories          net
 conflicts           ldns
 license             BSD
@@ -30,10 +30,11 @@ long_description    Unbound is a validating, recursive, and caching DNS \
 
 master_sites        http://unbound.net/downloads/
 
-checksums           md5     2cdcfe0ca45373c6b22e274560ae9943 \
-                    sha1    b0d7c58f173c5c80cc81345f6766555f96bde20d
+checksums           md5     97ee3c4a9877ff725fad23e31ecadfe0 \
+                    sha1    6e9d663b414bcbbc7db75d0fc3b9174e45ec0951
 
-configure.args-append --with-pidfile=${prefix}/var/run/${name}/${name}.pid
+configure.args-append   --with-pidfile=${prefix}/var/run/${name}/${name}.pid \
+                        --with-ldns-builtin
 
 post-destroot {
     addgroup ${unboundgroup}
