add swig-go binding (#27277)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73395 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/swig/Portfile
+++ b/dports/devel/swig/Portfile
@@ -40,7 +40,7 @@ post-patch {
     reinplace "s/\[\[:<:\]\]sed\[\[:>:\]\]/gsed/g" ${worksrcpath}/configure
 }
 
-foreach lang {python perl5 gcj guile mzscheme ruby php ocaml pike lua chicken allegrocl clisp r tcl csharp octave java} {
+foreach lang {python perl5 gcj guile mzscheme ruby php ocaml pike lua chicken allegrocl clisp r tcl csharp octave java go} {
     configure.args-append --without-${lang}
 }
 
