redis: fix build on ppc (#20295)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73397 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/redis/Portfile
+++ b/dports/databases/redis/Portfile
@@ -33,6 +33,8 @@ checksums               md5     60656113efb6759ab644d7495629d90b \
                         sha1    fee2f1960eda22385503517a9a6dcae610df84d5 \
                         rmd160  e8ae60e9c5cf79b2f81233bfa6516659fea3983f
 
+patchfiles              redis.c.diff
+
 use_configure           no
 
 build.env-append        CC=${configure.cc}
