qt4-creator-mac changes: * add support for ccache * correct arch building * correct build type to be just 'release' * install into Qt's app director correctly
git-svn-id: https://svn.macports.org/repository/macports/trunk@73402 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qt4-creator-mac/Portfile
+++ b/dports/devel/qt4-creator-mac/Portfile
@@ -22,19 +22,42 @@ checksums           md5     7b670968ec80d2d413ff22605a31a77d \
                     sha1    367b5f148f46a31ab25342917f44992ee57a1558 \
                     rmd160  ac0f61a82d49fb5768331f548cdad44b48c4ca14
 
+# fix up QMake build files to remove debug and release building;
+# specify that here instead.
+patchfiles          patch-remove_build_types.diff
+
+post-patch {
+    # remove arch from QMake build scripts
+    reinplace "/ppc/d" ${worksrcpath}/qtcreator.pri
+}
+
+pre-configure {
+    # set arch type(s); done is a stage to make sure the 'options
+    # qt_arch_types' is evaluated -after- +universal (if selected).
+    configure.pre_args CONFIG+="${qt_arch_types}"
+
+    # always build just the release, no debug
+    configure.pre_args-append CONFIG+="release"
+}
+
 configure.cmd       ${qt_qmake_cmd}
-configure.pre_args
-configure.args
+configure.args      "-o Makefile qtcreator.pro"
 configure.post_args
 configure.universal_args
 
-destroot {
-    copy "${worksrcpath}/bin/Qt Creator.app" "${destroot}${applications_dir}"
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
+    }
 }
 
-variant universal {
-    configure.args-append \"CONFIG+=[string map {i386 x86} ${universal_archs}]\"
+destroot {
+    xinstall -m 755 -d ${destroot}${qt_apps_dir}
+    copy "${worksrcpath}/bin/Qt Creator.app" "${destroot}${qt_apps_dir}"
 }
+
+universal_variant   yes
 
 livecheck.type      regex
 livecheck.url       http://get.qt.nokia.com/qtcreator/
