qt4-creator-mac: rev bump to use latest changes.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73403 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qt4-creator-mac/Portfile
+++ b/dports/devel/qt4-creator-mac/Portfile
@@ -6,6 +6,7 @@ PortGroup           qt4 1.0
 
 name                qt4-creator-mac
 version             2.0.1
+revision            1
 categories          devel aqua
 platforms           darwin
 maintainers         mcalhoun openmaintainer
